# study-ws-for-cdw

./: .gitignore  .pre-commit-config.yaml  README.md  llm_inference.sh  pyproject.toml  run.sh
config/: annotation_replications.json  conf_dev.yml  conf_general.yml  conf_hyper_label_model.yml  conf_mv.yml  conf_task_independent.yml  conf_test.yml  conf_train.yml  logical_relations.json  patterns.json  prompts.json
notebooks/analysis/: table1.md
notebooks/annotation_et_screening/: Regex development.md  annotation_dev_set.md  annotation_test_set_AC.md  annotation_test_set_EK.md  read_export_annotations.md
notebooks/cohort/: Apply algorithm for Cancer patient detection.md  split_train_test_dev.md
scripts/: apply_llm_lf.py  apply_no_llm_lf.py  data_selection.py  evaluate.py  evaluate_all.py  inference.py  label_modelling.py  merge_lf_results.py  metrics_table.py  retrieve_external_knowledge.py  train.py  train2.py
tests/: annotation.py
wedsak/: registry.py
wedsak/cohort/: cancer_inca.py
wedsak/events/: base.py  cancer_stays_inca.py  drugs.py  imaging.py  notes.py
wedsak/label_model/: base.py  hyper_label.py  majority_vote.py  metal.py  pipeline.py
wedsak/lf/llm/: llm_utils.py  pipeline.py
wedsak/lf/rule_based/: logical.py
wedsak/misc/: annotation.py  constants.py  data_wrangling.py  getters.py  logger_utils.py  metrics.py  utils.py
wedsak/plots/: training_curves.py  utils.py
wedsak/processing/: export_dataset.py  inference.py  label_model.py  sampling.py
wedsak/processing/fhir/: converter.py  data_models.py  procedure_example.json  utils.py
wedsak/tables/: table1.py
wedsak/training/: loss.py
